// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> should render avatar with color information 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c3.c3.c3.c3.c3 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(200,84%,44%,0.09);
}

.c3.c3.c3.c3.c3 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c5.c5.c5.c5.c5 {
  color: hsla(200,84%,37%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <div
      class="c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        color="information"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <p
            class="c5"
            data-blade-component="text"
          >
            NK
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with color negative 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c3.c3.c3.c3.c3 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(4,74%,49%,0.09);
}

.c3.c3.c3.c3.c3 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c5.c5.c5.c5.c5 {
  color: hsla(4,74%,49%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <div
      class="c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        color="negative"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <p
            class="c5"
            data-blade-component="text"
          >
            NK
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with color neutral 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c3.c3.c3.c3.c3 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c5.c5.c5.c5.c5 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <div
      class="c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        color="neutral"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <p
            class="c5"
            data-blade-component="text"
          >
            NK
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with color notice 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c3.c3.c3.c3.c3 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(25,90%,48%,0.09);
}

.c3.c3.c3.c3.c3 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c5.c5.c5.c5.c5 {
  color: hsla(25,85%,42%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <div
      class="c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        color="notice"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <p
            class="c5"
            data-blade-component="text"
          >
            NK
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with color positive 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c3.c3.c3.c3.c3 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(150,100%,32%,0.09);
}

.c3.c3.c3.c3.c3 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c5.c5.c5.c5.c5 {
  color: hsla(150,100%,27%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <div
      class="c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        color="positive"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <p
            class="c5"
            data-blade-component="text"
          >
            NK
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with color primary 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c3.c3.c3.c3.c3 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(227,100%,59%,0.09);
}

.c3.c3.c3.c3.c3 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c5.c5.c5.c5.c5 {
  color: hsla(227,100%,59%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <div
      class="c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        color="primary"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <p
            class="c5"
            data-blade-component="text"
          >
            NK
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with icon 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c3.c3.c3.c3.c3 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <div
      class="c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        color="neutral"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                data-blade-component="svg-path"
                fill="hsla(211, 33%, 21%, 1)"
              />
              <path
                d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                data-blade-component="svg-path"
                fill="hsla(211, 33%, 21%, 1)"
              />
              <path
                clip-rule="evenodd"
                d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                data-blade-component="svg-path"
                fill="hsla(211, 33%, 21%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p
            class="c6"
            data-blade-component="text"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with size large 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c3.c3.c3.c3.c3 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 48px;
  height: 48px;
  width: 48px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3 img {
  display: block;
  height: 48px;
  width: 48px;
  border-radius: 9999px;
  object-fit: cover;
}

.c5.c5.c5.c5.c5 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <div
      class="c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        color="neutral"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <p
            class="c5"
            data-blade-component="text"
          >
            NK
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with size medium 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c3.c3.c3.c3.c3 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c5.c5.c5.c5.c5 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <div
      class="c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        color="neutral"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <p
            class="c5"
            data-blade-component="text"
          >
            NK
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with size small 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 28px;
  height: 28px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c3.c3.c3.c3.c3 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 28px;
  height: 28px;
  width: 28px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3 img {
  display: block;
  height: 28px;
  width: 28px;
  border-radius: 9999px;
  object-fit: cover;
}

.c5.c5.c5.c5.c5 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <div
      class="c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        color="neutral"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <p
            class="c5"
            data-blade-component="text"
          >
            NK
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with size xlarge 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 56px;
  height: 56px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c3.c3.c3.c3.c3 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 56px;
  height: 56px;
  width: 56px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3 img {
  display: block;
  height: 56px;
  width: 56px;
  border-radius: 9999px;
  object-fit: cover;
}

.c5.c5.c5.c5.c5 {
  color: hsla(211,33%,21%,1);
  font-family: "TASA Orbiter","TASA Orbiter Fallback Arial",Arial;
  font-size: 1.25rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.625rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <div
      class="c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        color="neutral"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <h5
            class="c5"
            data-blade-component="heading"
          >
            NK
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with size xsmall 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c3.c3.c3.c3.c3 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 20px;
  height: 20px;
  width: 20px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3 img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 9999px;
  object-fit: cover;
}

.c5.c5.c5.c5.c5 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <div
      class="c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        color="neutral"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <p
            class="c5"
            data-blade-component="text"
          >
            NK
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render default avatar 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c3.c3.c3.c3.c3 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <div
      class="c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        color="neutral"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C9.23858 2 7 4.23858 7 7C7 9.76142 9.23858 12 12 12C14.7614 12 17 9.76142 17 7C17 4.23858 14.7614 2 12 2ZM9 7C9 5.34315 10.3431 4 12 4C13.6569 4 15 5.34315 15 7C15 8.65685 13.6569 10 12 10C10.3431 10 9 8.65685 9 7Z"
                data-blade-component="svg-path"
                fill="hsla(211, 33%, 21%, 1)"
                fill-rule="evenodd"
              />
              <path
                d="M8 14C5.23858 14 3 16.2386 3 19V21C3 21.5523 3.44772 22 4 22C4.55228 22 5 21.5523 5 21V19C5 17.3431 6.34315 16 8 16H16C17.6569 16 19 17.3431 19 19V21C19 21.5523 19.4477 22 20 22C20.5523 22 21 21.5523 21 21V19C21 16.2386 18.7614 14 16 14H8Z"
                data-blade-component="svg-path"
                fill="hsla(211, 33%, 21%, 1)"
              />
            </svg>
          </div>
          <p
            class="c6"
            data-blade-component="text"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render square variant of avatar 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c2.c2.c2.c2.c2 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 4px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c3.c3.c3.c3.c3 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 4px;
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 4px;
  object-fit: cover;
}

.c5.c5.c5.c5.c5 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <div
      class="c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        color="neutral"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <p
            class="c5"
            data-blade-component="text"
          >
            NK
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
